--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/yourcode.js"
+      crossorigin="anonymous"
+    ></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/oauth4webapi/1.1.3/index.js"
@@ -36,8 +40,13 @@
         <h5>I am a web developer</h5>
         <div class="newslatter">
           <form>
-            <input type="email" name="email" id="mail" placeholder="enter your email address">
-            <input type="submit" name="submit" value="lets start">
+            <input
+              type="email"
+              name="email"
+              id="mail"
+              placeholder="enter your email address"
+            />
+            <input type="submit" name="submit" value="lets start" />
           </form>
         </div>
       </div>
